--- a/src/css/transaction.css
+++ b/src/css/transaction.css
@@ -1,4 +1,4 @@
- @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 *{
  margin: 0;
@@ -91,6 +91,13 @@ h1{
 
 .side-bar .menu .item .sub-menu a{
  padding-left: 80px;
+}
+
+/* Active for the revenue collection dropdown */
+.sub-item.active {
+  background: #5e8bcf;
+  color: #fff;
+  transition: 0.3s ease;
 }
 
 .rotate{
